...
                MapComponent(context = context, mapViewportState = mapViewportState, friends = state.friends, modifier = Modifier.fillMaxSize())
            }

            Box(modifier = Modifier.fillMaxWidth().padding(bottom = 16.dp)) {
                Button(
                    onClick = { showDialog = true },
                    modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("broadcast_button")
                ) { Text("Broadcast") }
            }
        }

        BroadcastDialog(showDialog = showDialog, userInput = userInput, onUserInputChange = { userInput = it },
            onBroadcastConfirm = {
...
    onNavigateToProfile: () -> Unit,
    isAdmin: Boolean
) {
    TopAppBar(
        title = {},
        navigationIcon = {
            IconButton(onClick = onNavigateToLog, modifier = Modifier.testTag("log_button")) {
                Icon(painter = painterResource(id = R.drawable.log_icon), contentDescription = "Log")
            }
        },
        actions = {
            IconButton(onClick = onNavigateToFriends, modifier = Modifier.testTag("friends_button")) {
                Icon(painter = painterResource(id = R.drawable.friends_svg), contentDescription = "Friends")
...
